--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                     <h1> <img src="assets/images/auo-removebg-preview.png"></h1>
+                     <h1>AUO</h1>
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Serach Start ***** -->
