--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,8 @@
                       <li class="scroll-to-section"><a href="#services">Services</a></li>
                       <li class="scroll-to-section"><a href="#courses">Courses</a></li>
                       <li class="scroll-to-section"><a href="#team">Team</a></li>
-                      <li class="scroll-to-section"><a href="#events">Sign up </a></li>
-                      <li class="scroll-to-section"><a href="#contact">Login</a></li>
+                      
+                      <li class="scroll-to-section"><a href="index1.html">Get Started</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
