--- a/public/index1.html
+++ b/public/index1.html
@@ -1,36 +1,241 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Auo</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>GreenVault | eLibrary</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+:root{
+  --purple1:white;
+  --purple2:green;
+  --card:white;
+  --accent:green;
+  --glass:rgba(255,255,255,.08);
+}
+
+*{box-sizing:border-box;font-family:Inter,Segoe UI,sans-serif}
+
+body{
+  margin:0;
+  min-height:100vh;
+  background:linear-gradient(180deg,var(--purple1),var(--purple2));
+  color:black;
+}
+
+/* AUTH */
+.auth{
+  max-width:420px;
+  margin:80px auto;
+  padding:30px;
+  background:var(--glass);
+  backdrop-filter:blur(20px);
+  border-radius:20px;
+}
+
+.auth h2{text-align:center}
+
+input{
+  width:100%;
+  padding:14px;
+  margin:10px 0;
+  border-radius:14px;
+  border:none;
+  background:#1f1440;
+  color:#fff;
+}
+
+button{
+  width:100%;
+  padding:14px;
+  border:none;
+  border-radius:16px;
+  background:var(--accent);
+  color:#fff;
+  font-weight:600;
+  cursor:pointer;
+}
+
+.toggle{text-align:center;margin-top:12px;opacity:.8;cursor:pointer}
+
+/* LIBRARY */
+.library{
+  display:none;
+  padding:25px;
+}
+
+.header{
+  font-size:24px;
+  margin-bottom:20px;
+}
+
+.collections{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
+  gap:15px;
+}
+
+.collection{
+  background:var(--card);
+  padding:20px;
+  border-radius:18px;
+  box-shadow:0 10px 30px rgba(0,0,0,.25);
+}
+
+.collection h4{margin:0 0 8px 0}
+
+.upload{
+  margin:30px 0;
+  background:var(--glass);
+  padding:20px;
+  border-radius:18px;
+}
+
+.books{
+  margin-top:20px;
+  display:grid;
+  gap:12px;
+}
+
+.book{
+  background:var(--card);
+  padding:14px;
+  border-radius:14px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.book a{color:var(--accent);text-decoration:none}
+</style>
 </head>
+
 <body>
-  <form id="authForm">
-  <h1 id="title">Welcome Back</h1>
-  <p id="subtitle">Login with your matric number</p>
 
-  <input
-    type="text"
-    id="Matric"
-    placeholder="Matric Number"
-    required
-  />
+<!-- AUTH -->
+<div class="auth" id="authBox">
+  <h2 id="authTitle">Login</h2>
 
-  <input
-    type="password"
-    id="password"
-    placeholder="Password"
-    required
-  />
+  <input id="nameInput" placeholder="Full Name" style="display:none">
+  <input id="matricInput" placeholder="Matric Number">
+  <input id="passwordInput" type="password" placeholder="Password">
 
-  <button type="submit" id="submitBtn">Login</button>
+  <button id="authBtn">Continue</button>
+  <div class="toggle" id="toggleMode">Create an account</div>
+</div>
 
-  <p id="switchText">Don’t have an account?</p>
-  <button type="button" id="toggleBtn">Sign up</button>
-</form>
+<!-- LIBRARY -->
+<div class="library" id="libraryPage">
+  <div class="header">
+    <h2>Welcome, <span id="userName"></span></h2>
+    <button class="logout" onclick="logout()">Logout</button>
+  </div>
 
+  <input type="file" id="bookFile" accept="application/pdf">
+  <input id="bookTitle" placeholder="Book Title">
+  <button id="uploadBtn">Upload PDF</button>
 
-  <script src="script.js"></script>
+  <div class="books" id="books"></div>
+</div>
+
+<script>
+/* ELEMENTS */
+const authBox = document.getElementById("authBox");
+const libraryPage = document.getElementById("libraryPage");
+const authTitle = document.getElementById("authTitle");
+const nameInput = document.getElementById("nameInput");
+const matricInput = document.getElementById("matricInput");
+const passwordInput = document.getElementById("passwordInput");
+const toggleMode = document.getElementById("toggleMode");
+const authBtn = document.getElementById("authBtn");
+const userName = document.getElementById("userName");
+const bookFile = document.getElementById("bookFile");
+const bookTitle = document.getElementById("bookTitle");
+const uploadBtn = document.getElementById("uploadBtn");
+const booksDiv = document.getElementById("books");
+
+/* STATE */
+let isLogin = true;
+let users = JSON.parse(localStorage.getItem("users") || "{}");
+let books = JSON.parse(localStorage.getItem("books") || "[]");
+let currentUser = JSON.parse(localStorage.getItem("currentUser"));
+
+/* TOGGLE LOGIN / SIGNUP */
+toggleMode.onclick = () => {
+  isLogin = !isLogin;
+  authTitle.innerText = isLogin ? "Login" : "Sign Up";
+  nameInput.style.display = isLogin ? "none" : "block";
+  toggleMode.innerText = isLogin ? "Create an account" : "Already have an account?";
+};
+
+/* AUTH */
+authBtn.onclick = () => {
+  const matric = matricInput.value.trim();
+  const password = passwordInput.value;
+  const name = nameInput.value.trim();
+
+  if (!matric || !password || (!isLogin && !name))
+    return alert("Fill all fields");
+
+  if (isLogin) {
+    if (!users[matric] || users[matric].password !== password)
+      return alert("Invalid login");
+  } else {
+    if (users[matric]) return alert("Matric already exists");
+    users[matric] = { name, password };
+    localStorage.setItem("users", JSON.stringify(users));
+  }
+
+  localStorage.setItem("currentUser", JSON.stringify(users[matric]));
+  openLibrary(users[matric].name);
+};
+
+/* OPEN LIBRARY */
+function openLibrary(name){
+  authBox.style.display="none";
+  libraryPage.style.display="block";
+  userName.innerText=name;
+  renderBooks();
+}
+
+/* AUTO LOGIN */
+if (currentUser && currentUser.name) {
+  openLibrary(currentUser.name);
+}
+
+/* UPLOAD BOOK */
+uploadBtn.onclick = () => {
+  const file = bookFile.files[0];
+  const title = bookTitle.value;
+  if (!file || !title) return alert("Select PDF & title");
+
+  const reader = new FileReader();
+  reader.onload = () => {
+    books.push({ title, data: reader.result });
+    localStorage.setItem("books", JSON.stringify(books));
+    renderBooks();
+  };
+  reader.readAsDataURL(file);
+};
+
+/* RENDER BOOKS */
+function renderBooks(){
+  booksDiv.innerHTML="";
+  books.forEach(b=>{
+    booksDiv.innerHTML += `
+      <div class="book">
+        <h4>${b.title}</h4>
+        <a href="${b.data}" download>Download PDF</a>
+      </div>`;
+  });
+}
+
+/* LOGOUT */
+function logout(){
+  localStorage.removeItem("currentUser");
+  location.reload();
+}
+</script>
+
 </body>
 </html>
