--- a/public/index1.html
+++ b/public/index1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>GreenVault | eLibrary</title>
+<title>eLibrary</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
