--- a/public/index1.html
+++ b/public/index1.html
@@ -272,7 +272,7 @@ button{
     <div class="icon"></div>
     <h3>Borrow a Book</h3>
     <p>Request physical books easily</p>
-   <a href="index2.html">Borrow</a>
+  <button> <a href="index2.html">Borrow</a></button>
   </div>
 
   <div class="card fade">
