--- a/public/index1.html
+++ b/public/index1.html
@@ -80,6 +80,7 @@ header span{color:var(--green)}
   background:radial-gradient(circle at var(--x,50%) var(--y,50%),rgba(22,199,132,.25),transparent 60%);
   opacity:0;
   transition:.3s;
+  pointer-events:none;
 }
 
 .card:hover::after{opacity:1}
