--- a/public/index1.html
+++ b/public/index1.html
@@ -309,7 +309,7 @@ button{
     <div class="icon"></div>
     <h3>Wishlist</h3>
     <p>Save books for later</p>
-    <button><a href="#">Open</a></button>
+    <button><a href="index2.html">Open</a></button>
   </da href="#" class="btn-link">Open</a
 
   <div class="card fade">
