--- a/public/index1.html
+++ b/public/index1.html
@@ -281,6 +281,7 @@ button{
     <div class="icon"></div>
     <h3>Borrow a Book</h3>
     <p>Request physical books easily</p>
+     <button><a href="index2.html">Open</a></button>
     <a href="index2.html" class="btn-link">Borrow</a>
   </div>
 
