--- a/public/index1.html
+++ b/public/index1.html
@@ -282,14 +282,13 @@ button{
     <h3>Borrow a Book</h3>
     <p>Request physical books easily</p>
      <button><a href="index2.html">Open</a></button>
-    <a href="index2.html" class="btn-link">Borrow</a>
   </div>
 
   <div class="card fade">
     <div class="icon"></div>
     <h3>E-Library</h3>
     <p>Read & download PDFs instantly</p>
-    <a href="#" class="btn-link">Open</a>
+     <button><a href="index2.html">Open</a></button>
   </div>
 
   <div class="card fade">
