--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
                       <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                       <li class="scroll-to-section"><a href="#services">Services</a></li>
                       <li class="scroll-to-section"><a href="#courses">Courses</a></li>
-                      <li class="scroll-to-section"><a href="#team">Team</a></li>
+                      <li class="scroll-to-section"><a href="admin.html">Admin</a></li>
                       
                       <li class="scroll-to-section"><a href="index1.html">Get Started</a></li>
                   </ul>   
