--- a/public/admin.html
+++ b/public/admin.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
 
-<h2>🛠️ Admin Dashboard</h2>
+<h2>Admin Dashboard</h2>
 
 <div class="admin-actions" style="margin:12px 0">
 	<button onclick="deleteAll()" style="background:#e85a4f">Delete All (books & requests)</button>
