--- a/public/index1.html
+++ b/public/index1.html
@@ -321,7 +321,7 @@ button{
 
 <!-- MOBILE NAV -->
 <div class="nav">
-  <span class="active">Home</span>
+  <span><button><a href="index2.html">Open</a></button></span>
   <span>Library</span>
   <span>Profile</span>
 </div>
